--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <%= render 'shared/header' %>
+
+    <% if controller_name == 'graphs' %>
+      <%= render 'shared/flash_messages' %>
+    <% end %>
+    
     <div class="graph-container">
     <%= yield %>
     </div>
