--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,13 +2,13 @@
   <nav class="navber navber-expand-sm navbar-dark bg-dark">
     <%= link_to "体重管理アプリ", root_path, class: 'navbar-brand' %>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="ナビゲーションの切り替え">
-      <span class="navbar-toggle-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="navbar-nav">
-            <%= link_to 'アカウント編集', edit_user_rgistration_path, class: 'nav-link' %>
+            <%= link_to 'アカウント編集', edit_user_registration_path, class: 'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
